improve selectors, add examples
